@@ -1,3 +1,4 @@
+// File: ext/vnua/veterinary_beapp/modules/material/service/impl/MaterialServiceImpl.java
 package ext.vnua.veterinary_beapp.modules.material.service.impl;
 
 import ext.vnua.veterinary_beapp.exception.DataExistException;
@@ -8,11 +9,8 @@ import ext.vnua.veterinary_beapp.modules.material.dto.entity.MaterialDto;
 import ext.vnua.veterinary_beapp.modules.material.dto.request.material.CreateMaterialRequest;
 import ext.vnua.veterinary_beapp.modules.material.dto.request.material.UpdateMaterialRequest;
 import ext.vnua.veterinary_beapp.modules.material.mapper.MaterialMapper;
-import ext.vnua.veterinary_beapp.modules.material.model.Material;
-import ext.vnua.veterinary_beapp.modules.material.model.Supplier;
-import ext.vnua.veterinary_beapp.modules.material.repository.MaterialBatchRepository;
-import ext.vnua.veterinary_beapp.modules.material.repository.MaterialRepository;
-import ext.vnua.veterinary_beapp.modules.material.repository.SupplierRepository;
+import ext.vnua.veterinary_beapp.modules.material.model.*;
+import ext.vnua.veterinary_beapp.modules.material.repository.*;
 import ext.vnua.veterinary_beapp.modules.material.repository.custom.CustomMaterialQuery;
 import ext.vnua.veterinary_beapp.modules.material.service.MaterialService;
 import jakarta.transaction.Transactional;
@@ -29,9 +27,20 @@ import java.util.List;
 @Service
 @RequiredArgsConstructor
 public class MaterialServiceImpl implements MaterialService {
+
     private final MaterialRepository materialRepository;
     private final SupplierRepository supplierRepository;
     private final MaterialBatchRepository materialBatchRepository;
+    private final UnitOfMeasureRepository unitOfMeasureRepository;
+
+    // NEW: repositories cho master mới
+    private final MaterialCategoryRepository materialCategoryRepository;
+    private final MaterialFormTypeRepository materialFormTypeRepository;
+    
+    // Active Ingredients repositories
+    private final ActiveIngredientRepository activeIngredientRepository;
+    private final MaterialActiveIngredientRepository materialActiveIngredientRepository;
+
     private final MaterialMapper materialMapper;
 
     @Override
@@ -42,13 +51,15 @@ public class MaterialServiceImpl implements MaterialService {
 
     @Override
     public MaterialDto selectMaterialById(Long id) {
-        Material material = materialRepository.findById(id)
+        // Use method with active ingredients for full data loading
+        Material material = materialRepository.findByIdWithActiveIngredients(id)
                 .orElseThrow(() -> new DataExistException("Vật liệu không tồn tại"));
         return materialMapper.toMaterialDto(material);
     }
 
     @Override
     public MaterialDto selectMaterialByCode(String materialCode) {
+        // Use findByMaterialCode with EntityGraph for active ingredients
         Material material = materialRepository.findByMaterialCode(materialCode)
                 .orElseThrow(() -> new DataExistException("Mã vật liệu không tồn tại"));
         return materialMapper.toMaterialDto(material);
@@ -57,30 +68,45 @@ public class MaterialServiceImpl implements MaterialService {
     @Override
     public List<MaterialDto> selectMaterialsBySupplier(Long supplierId) {
         List<Material> materials = materialRepository.findBySupplierId(supplierId);
-        return materials.stream()
-                .map(materialMapper::toMaterialDto)
-                .collect(java.util.stream.Collectors.toList());
+        return materials.stream().map(materialMapper::toMaterialDto).toList();
+    }
+
+    @Override
+    public List<?> getMaterialActiveIngredients(Long materialId) {
+        // Verify material exists
+        Material material = materialRepository.findById(materialId)
+                .orElseThrow(() -> new DataExistException("Vật liệu không tồn tại"));
+        
+        // Get active ingredients with details
+        List<MaterialActiveIngredient> activeIngredients = materialActiveIngredientRepository
+                .findByMaterialIdWithActiveIngredient(materialId);
+        
+        // Map to simple DTO for dropdown
+        return activeIngredients.stream()
+                .map(mai -> {
+                    var dto = new Object() {
+                        public final Long id = mai.getActiveIngredient().getId();
+                        public final String ingredientName = mai.getActiveIngredient().getIngredientName();
+                        public final String ingredientCode = mai.getActiveIngredient().getIngredientCode();
+                        public final BigDecimal contentValue = mai.getContentValue();
+                        public final String contentUnit = mai.getContentUnit();
+                        public final String notes = mai.getNotes();
+                    };
+                    return dto;
+                })
+                .toList();
     }
 
     @Override
     @Transactional
     @Auditable(action = AuditAction.CREATE, entityName = "Material", description = "Tạo mới vật liệu")
     public MaterialDto createMaterial(CreateMaterialRequest request) {
-        // Validate supplier
-        Supplier supplier = null;
-        if (request.getSupplierId() != null) {
-            supplier = supplierRepository.findById(request.getSupplierId())
-                    .orElseThrow(() -> new DataExistException("Nhà cung cấp không tồn tại"));
-        }
-
-        // Unique checks
-        materialRepository.findByMaterialCode(request.getMaterialCode())
+        // ====== Validate/unique ======
+        materialRepository.findByMaterialCode(request.getMaterialCode().trim())
                 .ifPresent(x -> { throw new DataExistException("Mã vật liệu đã tồn tại"); });
-
-        materialRepository.findByMaterialName(request.getMaterialName())
+        materialRepository.findByMaterialName(request.getMaterialName().trim())
                 .ifPresent(x -> { throw new DataExistException("Tên vật liệu đã tồn tại"); });
 
-        // Numeric validations (không đụng currentStock vì là derived)
         if (request.getMinimumStockLevel() != null
                 && request.getMinimumStockLevel().compareTo(BigDecimal.ZERO) < 0) {
             throw new MyCustomException("Mức tồn kho tối thiểu không được âm");
@@ -101,23 +127,67 @@ public class MaterialServiceImpl implements MaterialService {
             }
         }
 
+        // ====== Resolve masters ======
+        UnitOfMeasure uom = unitOfMeasureRepository.findById(request.getUnitOfMeasureId())
+                .orElseThrow(() -> new MyCustomException("Đơn vị đo không tồn tại"));
+
+        Supplier supplier = null;
+        if (request.getSupplierId() != null) {
+            supplier = supplierRepository.findById(request.getSupplierId())
+                    .orElseThrow(() -> new DataExistException("Nhà cung cấp không tồn tại"));
+        }
+
+        MaterialCategory category = materialCategoryRepository.findById(request.getMaterialCategoryId())
+                .orElseThrow(() -> new MyCustomException("Loại vật liệu không tồn tại"));
+
+        MaterialFormType formType = null;
+        if (request.getMaterialFormTypeId() != null) {
+            formType = materialFormTypeRepository.findById(request.getMaterialFormTypeId())
+                    .orElseThrow(() -> new MyCustomException("Dạng vật liệu không tồn tại"));
+        }
+
         try {
-            Material material = materialMapper.toCreateMaterial(request);
-            if (supplier != null) {
-                material.setSupplier(supplier);
-            }
-            material.setIsActive(true);
-            // currentStock là derived → mặc định 0 khi mới tạo (chưa có lô)
-            if (material.getCurrentStock() == null) material.setCurrentStock(BigDecimal.ZERO);
+            // KHÔNG rely mapper cho master vừa đổi schema — map tay an toàn hơn
+            Material material = new Material();
+            material.setMaterialCode(request.getMaterialCode().trim());
+            material.setMaterialName(request.getMaterialName().trim());
+            material.setInternationalName(request.getInternationalName());
+
+            material.setMaterialCategory(category);
+            material.setMaterialFormType(formType);
+
+            material.setPurityPercentage(request.getPurityPercentage());
+            material.setIuPerGram(request.getIuPerGram());
+            material.setColor(request.getColor());
+            material.setOdor(request.getOdor());
+            material.setMoistureContent(request.getMoistureContent());
+            material.setViscosity(request.getViscosity());
+            material.setUnitOfMeasure(uom);
+            material.setStandardApplied(request.getStandardApplied());
+            material.setSupplier(supplier);
+            material.setMinimumStockLevel(request.getMinimumStockLevel());
+            material.setFixedPrice(request.getFixedPrice());
+            material.setRequiresColdStorage(Boolean.TRUE.equals(request.getRequiresColdStorage()));
+            material.setIsActive(Boolean.TRUE.equals(request.getIsActive()));
+            material.setNotes(request.getNotes());
+
+            // tồn kho tổng là dẫn xuất từ batch → mặc định 0 khi mới tạo
+            material.setCurrentStock(BigDecimal.ZERO);
 
             Material saved = materialRepository.saveAndFlush(material);
+            
+            // Xử lý active ingredients
+            if (request.getActiveIngredients() != null && !request.getActiveIngredients().isEmpty()) {
+                createActiveIngredientRelations(saved, request.getActiveIngredients());
+            }
 
-            // Đồng bộ tồn kho (thực ra sẽ vẫn = 0 khi mới tạo)
-            syncMaterialStock(saved.getId());
+            // sync lại (dù 0) để giữ hành vi cũ
+            // TODO: Re-enable when syncMaterialStock is implemented
+            // syncMaterialStock(saved.getId());
 
             return materialMapper.toMaterialDto(saved);
         } catch (Exception e) {
-            throw new MyCustomException("Có lỗi xảy ra trong quá trình thêm vật liệu");
+            throw new MyCustomException("Có lỗi xảy ra trong quá trình thêm vật liệu: " + e.getMessage(), e);
         }
     }
 
@@ -125,27 +195,24 @@ public class MaterialServiceImpl implements MaterialService {
     @Transactional
     @Auditable(action = AuditAction.UPDATE, entityName = "Material", description = "Cập nhật vật liệu")
     public MaterialDto updateMaterial(UpdateMaterialRequest request) {
-        Material existingMaterial = materialRepository.findById(request.getId())
+        Material existing = materialRepository.findById(request.getId())
                 .orElseThrow(() -> new DataExistException("Vật liệu không tồn tại"));
 
-        // Validate supplier
-        Supplier supplier = null;
-        if (request.getSupplierId() != null) {
-            supplier = supplierRepository.findById(request.getSupplierId())
-                    .orElseThrow(() -> new DataExistException("Nhà cung cấp không tồn tại"));
-        }
-
-        // Unique checks (exclude current)
-        if (!existingMaterial.getMaterialCode().equals(request.getMaterialCode())) {
-            materialRepository.findByMaterialCodeAndIdNot(request.getMaterialCode(), request.getId())
+        // ====== Unique checks (exclude current) ======
+        if (request.getMaterialCode() != null && !request.getMaterialCode().trim().isEmpty()
+                && !request.getMaterialCode().equals(existing.getMaterialCode())) {
+            materialRepository.findByMaterialCodeAndIdNot(request.getMaterialCode().trim(), request.getId())
                     .ifPresent(x -> { throw new DataExistException("Mã vật liệu đã tồn tại"); });
+            existing.setMaterialCode(request.getMaterialCode().trim());
         }
-        if (!existingMaterial.getMaterialName().equals(request.getMaterialName())) {
-            materialRepository.findByMaterialNameAndIdNot(request.getMaterialName(), request.getId())
+        if (request.getMaterialName() != null && !request.getMaterialName().trim().isEmpty()
+                && !request.getMaterialName().equals(existing.getMaterialName())) {
+            materialRepository.findByMaterialNameAndIdNot(request.getMaterialName().trim(), request.getId())
                     .ifPresent(x -> { throw new DataExistException("Tên vật liệu đã tồn tại"); });
+            existing.setMaterialName(request.getMaterialName().trim());
         }
 
-        // Numeric validations (không đụng currentStock vì là derived)
+        // ====== Numeric validations ======
         if (request.getMinimumStockLevel() != null
                 && request.getMinimumStockLevel().compareTo(BigDecimal.ZERO) < 0) {
             throw new MyCustomException("Mức tồn kho tối thiểu không được âm");
@@ -166,26 +233,62 @@ public class MaterialServiceImpl implements MaterialService {
             }
         }
 
+        // ====== Resolve masters nếu có thay đổi ======
+        if (request.getUnitOfMeasureId() != null) {
+            UnitOfMeasure uom = unitOfMeasureRepository.findById(request.getUnitOfMeasureId())
+                    .orElseThrow(() -> new MyCustomException("Đơn vị đo không tồn tại"));
+            existing.setUnitOfMeasure(uom);
+        }
+        if (request.getSupplierId() != null) {
+            Supplier supplier = supplierRepository.findById(request.getSupplierId())
+                    .orElseThrow(() -> new DataExistException("Nhà cung cấp không tồn tại"));
+            existing.setSupplier(supplier);
+        }
+        if (request.getMaterialCategoryId() != null) {
+            MaterialCategory category = materialCategoryRepository.findById(request.getMaterialCategoryId())
+                    .orElseThrow(() -> new MyCustomException("Loại vật liệu không tồn tại"));
+            existing.setMaterialCategory(category);
+        }
+        if (request.getMaterialFormTypeId() != null) {
+            MaterialFormType formType = materialFormTypeRepository.findById(request.getMaterialFormTypeId())
+                    .orElseThrow(() -> new MyCustomException("Dạng vật liệu không tồn tại"));
+            existing.setMaterialFormType(formType);
+        }
+
+        // ====== Map các scalar còn lại ======
+        existing.setInternationalName(request.getInternationalName());
+        existing.setPurityPercentage(request.getPurityPercentage());
+        existing.setIuPerGram(request.getIuPerGram());
+        existing.setColor(request.getColor());
+        existing.setOdor(request.getOdor());
+        existing.setMoistureContent(request.getMoistureContent());
+        existing.setViscosity(request.getViscosity());
+        existing.setStandardApplied(request.getStandardApplied());
+        existing.setMinimumStockLevel(request.getMinimumStockLevel());
+        existing.setFixedPrice(request.getFixedPrice());
+        if (request.getRequiresColdStorage() != null) {
+            existing.setRequiresColdStorage(request.getRequiresColdStorage());
+        }
+        if (request.getIsActive() != null) {
+            existing.setIsActive(request.getIsActive());
+        }
+        existing.setNotes(request.getNotes());
+
         try {
-            // Giữ lại tồn hiện tại trước khi map (tránh mapper overwrite)
-            BigDecimal keepCurrentStock = existingMaterial.getCurrentStock();
-
-            materialMapper.updateMaterialFromRequest(request, existingMaterial);
-            if (supplier != null) {
-                existingMaterial.setSupplier(supplier);
+            // Không đụng currentStock (dẫn xuất)
+            Material saved = materialRepository.saveAndFlush(existing);
+            
+            // Cập nhật active ingredients nếu có thay đổi
+            if (request.getActiveIngredients() != null) {
+                updateActiveIngredientRelations(saved, request.getActiveIngredients());
             }
-
-            // Không cho mapper ghi đè currentStock
-            existingMaterial.setCurrentStock(keepCurrentStock);
-
-            Material saved = materialRepository.saveAndFlush(existingMaterial);
-
-            // Đồng bộ lại tồn kho từ lô (phòng trường hợp thay đổi ảnh hưởng đến cách hiển thị/đơn vị)
-            syncMaterialStock(saved.getId());
-
+            
+            // Đồng bộ lại tồn kho từ lô
+            // TODO: Re-enable when syncMaterialStock is implemented
+            // syncMaterialStock(saved.getId());
             return materialMapper.toMaterialDto(saved);
         } catch (Exception e) {
-            throw new MyCustomException("Có lỗi xảy ra trong quá trình cập nhật vật liệu");
+            throw new MyCustomException("Có lỗi xảy ra trong quá trình cập nhật vật liệu: " + e.getMessage(), e);
         }
     }
 
@@ -195,14 +298,14 @@ public class MaterialServiceImpl implements MaterialService {
         Material material = materialRepository.findById(id)
                 .orElseThrow(() -> new DataExistException("Vật liệu không tồn tại"));
 
-        if (material.getBatches() != null && !material.getBatches().isEmpty()) {
+        if (material.getBatchItems() != null && !material.getBatchItems().isEmpty()) {
             throw new MyCustomException("Không thể xóa vật liệu đang có lô hàng");
         }
 
         try {
             materialRepository.deleteById(id);
         } catch (Exception e) {
-            throw new MyCustomException("Có lỗi xảy ra trong quá trình xóa vật liệu");
+            throw new MyCustomException("Có lỗi xảy ra trong quá trình xóa vật liệu: " + e.getMessage(), e);
         }
     }
 
@@ -213,11 +316,9 @@ public class MaterialServiceImpl implements MaterialService {
         for (Long id : ids) {
             Material material = materialRepository.findById(id)
                     .orElseThrow(() -> new MyCustomException("Có lỗi xảy ra trong quá trình xóa danh sách vật liệu!"));
-
-            if (material.getBatches() != null && !material.getBatches().isEmpty()) {
+            if (material.getBatchItems() != null && !material.getBatchItems().isEmpty()) {
                 throw new MyCustomException("Không thể xóa vật liệu đang có lô hàng: " + material.getMaterialName());
             }
-
             materialDtos.add(materialMapper.toMaterialDto(material));
             materialRepository.delete(material);
         }
@@ -227,11 +328,13 @@ public class MaterialServiceImpl implements MaterialService {
     /**
      * Đồng bộ tồn kho tổng của Material từ các lô (MaterialBatch).
      * NOTE: giữ chữ ký cũ để không phá FE, nhưng bỏ ý nghĩa "set tay".
+     * TODO: Currently not functional - needs refactoring for MaterialBatchItem
      */
     @Override
     @Transactional
     public void updateCurrentStock(Long materialId, Double ignoredNewStock) {
-        syncMaterialStock(materialId);
+        // syncMaterialStock(materialId);
+        // Temporarily disabled - needs refactoring
     }
 
     @Override
@@ -240,43 +343,67 @@ public class MaterialServiceImpl implements MaterialService {
         Material material = materialRepository.findById(materialId)
                 .orElseThrow(() -> new DataExistException("Vật liệu không tồn tại"));
 
-        material.setIsActive(!material.getIsActive());
+        material.setIsActive(!Boolean.TRUE.equals(material.getIsActive()));
         materialRepository.saveAndFlush(material);
     }
 
     @Override
     public List<MaterialDto> getLowStockMaterials() {
         List<Material> materials = materialRepository.findLowStockMaterials();
-        return materials.stream()
-                .map(materialMapper::toMaterialDto)
-                .collect(java.util.stream.Collectors.toList());
+        return materials.stream().map(materialMapper::toMaterialDto).toList();
     }
 
     @Override
     public List<MaterialDto> getMaterialsRequiringColdStorage() {
         List<Material> materials = materialRepository.findByRequiresColdStorageTrue();
-        return materials.stream()
-                .map(materialMapper::toMaterialDto)
-                .collect(java.util.stream.Collectors.toList());
+        return materials.stream().map(materialMapper::toMaterialDto).toList();
     }
 
     @Override
     public List<MaterialDto> getActiveMaterials() {
         List<Material> materials = materialRepository.findByIsActiveTrue();
-        return materials.stream()
-                .map(materialMapper::toMaterialDto)
-                .collect(java.util.stream.Collectors.toList());
+        return materials.stream().map(materialMapper::toMaterialDto).toList();
     }
 
     @Override
     @Transactional
     public void syncMaterialStock(Long materialId) {
-        BigDecimal totalQuantity = materialBatchRepository.getTotalQuantityByMaterial(materialId);
-        BigDecimal newStock = (totalQuantity != null ? totalQuantity : BigDecimal.ZERO);
+        // TODO: Refactor to sum quantities from MaterialBatchItem
+        // Use MaterialBatchItemRepository.calculateTotalAvailableQuantity(materialId, locationId)
+        throw new UnsupportedOperationException(
+                "Stock sync needs to be refactored to work with MaterialBatchItem. " +
+                "Use MaterialBatchItemRepository.calculateTotalAvailableQuantity() instead.");
+    }
 
-        materialRepository.findById(materialId).ifPresent(m -> {
-            m.setCurrentStock(newStock);
-            materialRepository.saveAndFlush(m);
-        });
+    private void createActiveIngredientRelations(Material material, List<ext.vnua.veterinary_beapp.modules.material.dto.request.activeIngredient.MaterialActiveIngredientRequest> activeIngredients) {
+        for (ext.vnua.veterinary_beapp.modules.material.dto.request.activeIngredient.MaterialActiveIngredientRequest request : activeIngredients) {
+            ActiveIngredient activeIngredient = activeIngredientRepository.findById(request.getActiveIngredientId())
+                    .orElseThrow(() -> new DataExistException("Hoạt chất với ID " + request.getActiveIngredientId() + " không tồn tại"));
+            
+            // Kiểm tra xem đã tồn tại chưa
+            if (materialActiveIngredientRepository.existsByMaterialIdAndActiveIngredientId(
+                    material.getId(), activeIngredient.getId())) {
+                continue; // Skip nếu đã tồn tại
+            }
+            
+            MaterialActiveIngredient mai = new MaterialActiveIngredient();
+            mai.setMaterial(material);
+            mai.setActiveIngredient(activeIngredient);
+            mai.setContentValue(request.getContentValue());
+            mai.setContentUnit(request.getContentUnit());
+            mai.setNotes(request.getNotes());
+            
+            materialActiveIngredientRepository.save(mai);
+        }
+    }
+
+    private void updateActiveIngredientRelations(Material material, List<ext.vnua.veterinary_beapp.modules.material.dto.request.activeIngredient.MaterialActiveIngredientRequest> activeIngredients) {
+        // Xóa tất cả active ingredients hiện tại
+        materialActiveIngredientRepository.deleteByMaterialId(material.getId());
+        
+        // Thêm lại active ingredients mới
+        if (activeIngredients != null && !activeIngredients.isEmpty()) {
+            createActiveIngredientRelations(material, activeIngredients);
+        }
     }
 }
